修复鸟类声音识别：添加MP3支持（pydub和ffmpeg）
- 改进音频处理函数，添加pydub作为MP3处理的备选方案
- 改进错误处理，提供更详细的错误信息
- 添加pydub到requirements.txt
- 更新Dockerfile.koyeb，添加ffmpeg和libsndfile1支持
- 修复MP3文件无法处理的问题

--- a/web_app/backend/Dockerfile.koyeb
+++ b/web_app/backend/Dockerfile.koyeb
@@ -2,7 +2,7 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# 安裝系統依賴
+# 安裝系統依賴（包括音頻處理所需的 ffmpeg）
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
@@ -10,6 +10,8 @@ RUN apt-get update && apt-get install -y \
     libglib2.0-0 \
     git \
     curl \
+    ffmpeg \
+    libsndfile1 \
     && rm -rf /var/lib/apt/lists/*
 
 # 安裝 Git LFS
