--- a/web_app/backend/requirements.txt
+++ b/web_app/backend/requirements.txt
@@ -7,6 +7,7 @@ Werkzeug>=3.0.1
 opencv-python>=4.8.0
 librosa>=0.10.0
 scipy>=1.11.0
+pydub>=0.25.1
 
 # Optional: For description-based species identification (semantic search)
 # Uncomment these for local development with semantic matching
